# instalily-partselect-agent

./: .gitignore  LICENSE  README.md  architecture.md
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: graph.py  orchestrator.py  state.py  validator.py
backend/app/agents/prompts/: loader.py  orchestrator.md  validator.md
backend/app/api/: chat.py  conversations.py  health.py
backend/app/conversation/: history.py  store.py
backend/app/db/: pool.py  repository.py  schema.sql
backend/app/kg/: base.py  builder.py  networkx_kg.py  schema.py
backend/app/llm/: anthropic_provider.py  base.py  events.py  groq_provider.py  openai_provider.py  registry.py
backend/app/schemas/: entities.py
backend/app/tools/: base.py  check_compatibility.py  find_parts_by_symptom.py  get_install_guide.py  lookup_part.py  registry.py  troubleshoot.py
backend/data/seed/: seed.yaml
backend/scripts/: build_kg.py  init_db.py  seed.py  smoke_api.py  smoke_kg.py  smoke_llm.py  smoke_orchestrator.py  smoke_repository.py  smoke_tools.py
backend/tests/eval/: run_eval.py  test_set.yaml
docs/: README.md  api.md  brand_notes.md  build_log.md  data_model.md  eval_methodology.md  eval_results.md  loom_script.md  operations.md  security.md  slides.html  slides.md  tools.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/components/: chat-actions.tsx  chat-panel.tsx  header.tsx  provider-switcher.tsx
frontend/components/messages/: compat-badge.tsx  fuzzy-confirm-card.tsx  install-checklist.tsx  message-bubble.tsx  product-card.tsx  tool-result.tsx  tool-step.tsx  troubleshoot-card.tsx  validator-badge.tsx
frontend/hooks/: use-chat.ts
frontend/lib/: conversation.ts  sse.ts  transport.ts  types.ts
