[project]
name = "partselect-agent-backend"
version = "0.1.0"
description = "PartSelect chat agent backend (FastAPI + LangGraph + KG/RAG)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sse-starlette>=2.0",
  "psycopg[binary,pool]>=3.1.18",
  "networkx>=3.2",
  "rapidfuzz>=3.6",
  "rank-bm25>=0.2.2",
  "chromadb>=0.4.24",
  "sentence-transformers>=2.5",
  "langgraph>=0.0.40",
  "langchain-core>=0.1.40",
  "anthropic>=0.25",
  "openai>=1.16",
  "groq>=0.5",
  "presidio-analyzer>=2.2.354",
  "presidio-anonymizer>=2.2.354",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.9",
]
scraper = [
  "scrapy>=2.11",
  "playwright>=1.42",
  "scrapy-playwright>=0.0.34",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
