[project]
name = "partselect-agent-backend"
version = "0.1.0"
description = "PartSelect chat agent backend (FastAPI + LangGraph + KG/RAG)."
requires-python = ">=3.11"

# Production runtime deps. Anything in this list is required for `app.main`
# to import and serve `/chat`. Heavy ML deps for Phase 2 retrieval and Phase 4
# PII live in optional groups so the production Docker image stays slim.
dependencies = [
  # Web + agent framework
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sse-starlette>=2.0",
  # Data layer
  "psycopg[binary,pool]>=3.1.18",
  "networkx>=3.2",
  "rapidfuzz>=3.6",
  # LLM providers
  "anthropic>=0.25",
  "openai>=1.16",
  "groq>=0.5",
  # Orchestration
  "langgraph>=0.0.40",
  "langchain-core>=0.1.40",
  # Plumbing
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "structlog>=24.1",
  "pyyaml>=6.0",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.9",
]
# Phase 2: hybrid retrieval (Chroma + BM25 + cross-encoder rerank).
# Heavy (~1GB with torch). Skip in production until Tool 4 starts using it.
retrieval = [
  "chromadb>=0.4.24",
  "sentence-transformers>=2.5",
  "rank-bm25>=0.2.2",
]
# Phase 4: PII tokenization + ticket-bypass form.
pii = [
  "presidio-analyzer>=2.2.354",
  "presidio-anonymizer>=2.2.354",
]
scraper = [
  "scrapy>=2.11",
  "playwright>=1.42",
  "scrapy-playwright>=0.0.34",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "scraper*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
